FIxing Hero bug. Deleting flex-wrap on left-element of hero to not overlap image when screen get smaller.

--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ a{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    flex-wrap: wrap;
     gap: 16px;
     height: 300px;
 }
